--- a/style.css
+++ b/style.css
@@ -1,49 +1,99 @@
-.nav_link{
-    font-family: cursive;
-    color: white;
-    font-size: 35px;
-}
-a{
-    text-decoration: none;
-    color: inherit;
-}
-header{
-    background-color: #07d1e0;
-    height: var(space-around);
-    width: auto;
-    justify-content: center;
-    align-items: center;
+* {
+    box-sizing: border-box;
+  }
+  
+  html {
+    scroll-behavior: smooth; 
+  }
+  
+  body {
     display: flex;
-}
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 320px;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    color: #000000;
+    background-color: #f2bcbc;
+  }
 
-.footer{
-    background-color: #100f0f;
-}
-
-.footer-blocks{
-    align-items: center;
+  .header {
+    background-color: #612c03;
+  }
+    
+  .container-main {
+    max-width: 1440px;
+    margin: 0 auto;
+    min-height: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .nav-list {
     display: flex;
     justify-content: space-around;
-
-}
-
-.footer-block-rs{
-    width: 150px;
-    height: auto;
-}
-
-.footer-block-year{
-    color: #5a5b5e;
-    font-weight: 650;
-    font-size: 30;
-}
-
-.footer-contacts{
-    background-color: #5a5b5e;
-    width: auto;
-    height: 60px;
-    margin-top: 35px;
-    display: flex;
-    justify-content: center;
     align-items: center;
-}
+    list-style: none;
+    flex-wrap: nowrap;
+    text-decoration: none;
+  }
+  
+  .nav-link {
+    position: relative;
+    padding: 0 12px;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 50px;
+    color: #ffffff; 
+  }
+  
+  .section {
+    width: 50%;
+    padding: 10px;
+    padding-bottom: 35px;
+    border-bottom: 2px solid #680808;
+  }
+ .project-link {
+  text-decoration: none;
+  color: #c10404
+ }
+ 
+  #education,
+  #languages {
+    border-bottom: 0;
+  }
+  
+  .footer {
+    background-color: #2b2732;
+    padding: 100px;  
+  }
+  
+  .footer-main {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    max-width: 1440 px;
+    margin: 0 auto;
+    color: #fff;
+  }
+  
+  .github-link {
+    color: #2664cf;
+    text-decoration: none;
+    line-height: 45px;
+  }
+  .email-link {
+    color: #2664cf;
+    text-decoration: none;
+    line-height: 45px;
+  }
+  
+  .rsschool-img {
+    width: 64x;
+    height: 64px;
+  }
